LibSharpPhysX/Generated/PxSerialFramework.h

//Generated by MinBinder.

ES physx::PxCollection* C_CONST_PxSerializationContext_getCollection(physx::PxSerializationContext cls){ // L129

    return cls.getCollection();
};

ES void C_PxSerializationContext_writeData(physx::PxSerializationContext cls,void* data,unsigned int size){ // L138

    return cls.writeData(data,size);
};

ES void C_PxSerializationContext_alignData(physx::PxSerializationContext cls,unsigned int alignment){ // L147

    return cls.alignData(alignment);
};

ES void C_PxSerializationContext_writeName(physx::PxSerializationContext cls,const char* name){ // L156

    return cls.writeName(name);
};

ES physx::PxBase* C_CONST_PxDeserializationContext_resolveReference(physx::PxDeserializationContext* cls,unsigned int kind,unsigned long long reference){ // L196

    return cls->resolveReference(kind,reference);
};

ES void C_PxDeserializationContext_readName(physx::PxDeserializationContext* cls,const char** name){ // L213

    return cls->readName(*name);
};

ES void C_PxDeserializationContext_alignExtraData(physx::PxDeserializationContext* cls,unsigned int alignment){ // L257

    return cls->alignExtraData(alignment);
};

ES unsigned int C_CONST_PxDeserializationContext_getPhysXVersion(physx::PxDeserializationContext* cls){ // L269

    return cls->getPhysXVersion();
};

ES physx::PxSerializer* C_PxSerializationRegistry_unregisterSerializer(physx::PxSerializationRegistry cls,unsigned short type){ // L324

    return cls.unregisterSerializer(type);
};

ES void C_PxSerializationRegistry_registerBinaryMetaDataCallback(physx::PxSerializationRegistry cls,void (physx::PxOutputStream&)* callback){ // L335

    return cls.registerBinaryMetaDataCallback(callback);
};

ES physx::PxSerializer* C_CONST_PxSerializationRegistry_getSerializer(physx::PxSerializationRegistry cls,unsigned short type){ // L345

    return cls.getSerializer(type);
};

ES physx::PxRepXSerializer* C_PxSerializationRegistry_unregisterRepXSerializer(physx::PxSerializationRegistry cls,unsigned short type){ // L372

    return cls.unregisterRepXSerializer(type);
};

ES physx::PxRepXSerializer* C_CONST_PxSerializationRegistry_getRepXSerializer(physx::PxSerializationRegistry cls,const char* typeName){ // L382

    return cls.getRepXSerializer(typeName);
};

ES void C_PxSerializationRegistry_release(physx::PxSerializationRegistry cls){ // L395

    return cls.release();
};